# SupPy

./: .buildinfo  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  algorithms.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: algorithms.doctree  environment.pickle  index.doctree
.doctrees/api/: feasibility.doctree  index.doctree  perturbations.doctree  projections.doctree  superiorization.doctree  utils.doctree
.doctrees/help/: help.doctree
.doctrees/installation/: installation.doctree
.doctrees/user_guide/: feasibility.doctree  general_intro.doctree  projection_methods.doctree  projections.doctree  superiorization.doctree
.github/workflows/: sphinx.yml
_modules/: index.html
_sources/: algorithms.rst.txt  index.rst.txt
_sources/api/: feasibility.rst.txt  perturbations.rst.txt  projections.rst.txt  superiorization.rst.txt  utils.rst.txt
_sources/user_guide/: feasibility.rst.txt  projection_methods.rst.txt  superiorization.rst.txt
api/: feasibility.html  index.html  perturbations.html  projections.html  superiorization.html  utils.html
docs/: conf.py  index.rst
docs/api/: index.rst
docs/help/: help.rst
docs/installation/: installation.rst
docs/user_guide/: general_intro.rst  projections.rst
examples/: Projections.ipynb  Superiorization.ipynb
help/: help.html
installation/: installation.html
suppy/: __init__.py
user_guide/: feasibility.html  general_intro.html  projection_methods.html  projections.html  superiorization.html
(+63 files in other folders)
